tests/expectations/compiler/integers/u32/max_fail.out
Error [ETYC0372008]: The value 4294967296 is not a valid `u32`
    --> compiler-test:4:18
     |
   4 |     let a: u32 = 4294967296u32;
     |                  ^^^^^^^^^^^^^
Error [ETYC0372083]: A program must have at least one entry point fn.
    --> compiler-test:1:9
     |
   1 | program test.aleo {}
     |         ^^^^^^^^^
